Feat: incons header left section

--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
             <!-- Col-Left -->
             <div class="col d-none d-md-block col-md-2 col-lg-4">
                 <!-- Header-left -->
-                <header class="ms_header-left border">
+                <header class="ms_header-left border d-flex align-items-center">
                     <div class="ms_avatar-cont ">
                         <img class="img-fluid rounded-circle py-1 ms-3" src="./img/avatar_io.jpg" alt="img-avatar">
                     </div>
-                    <div class="ms_incons-avatar d-none d-lg-block border">
-
+                    <div class="ms_incons-avatar d-none d-lg-block text-center text-secondary fs-5">
+                        <a href="#"><i class="fa-solid fa-circle-notch me-2 "></i></a>
+                        <a href="#"><i class="fa-solid fa-message "></i></a> 
+                        <a href="#"><i class="fa-solid fa-ellipsis-vertical ms-2 "></i></a> 
                     </div>
                 </header>
                 <!-- /Header-left -->
