--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                     <div class="ms_search-chat d-none d-lg-flex justify-content-center border p-2">
                         <div class="ms_input-search border d-flex justify-content-between align-items-center p-2">
-                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <a href="#" class="text-secondary"><i class="fa-solid fa-magnifying-glass"></i></a> 
                             <input class="border-0"  type="text" placeholder="Cerca o inizia una nuova chat">
                         </div>
                     </div>
@@ -280,7 +280,7 @@
             <div class="col col-md-10 col-lg-8 ">
                 <!-- Header-Right -->
                 <header class="ms_header-right d-flex border">
-                    <div class="ms_avatar-chat-cont d-flex  border">
+                    <div class="ms_avatar-chat-cont d-flex">
                         <img class="img rounded-circle py-1 ms-2 " src="./img/avatar_1.jpg" alt="avatar_1">
                         <div class="ms_info-avatar ms-2 d-flex flex-column justify-content-center">
                             <div>
@@ -293,8 +293,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="ms_chat-icons border">
-
+                    <div class="ms_chat-icons text-secondary d-flex align-items-center justify-content-end fs-5">
+                        <a href="#"><i class="fa-solid fa-magnifying-glass me-3"></i></a> 
+                        <a href="#"><i class="fa-solid fa-paperclip me-3"></i></a> 
+                        <a href="#"><i class="fa-solid fa-ellipsis-vertical me-3"></i></a>
                     </div>
                 </header>
                 <!-- /Header-Right -->
